# NDIWrapper

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
ndiwrapper/: CMakeLists.txt
ndiwrapper/include/: AugmentedTypes.hpp  MetaData.hpp  NDIBase.hpp  NDILibraryManager.hpp  NDIReceiver.hpp  NDISender.hpp  ThreadPool.hpp
ndiwrapper/src/: NDIBase.cpp  NDILibraryManager.cpp  NDIReceiver.cpp  NDISender.cpp  ThreadPool.cpp
sample2/: CMakeLists.txt  main.cpp
sampleapplication/: CMakeLists.txt  main.cpp
